# Mastermind

./: classe.h
Testes iniciais/: Trabalho.h  main.cpp
Trabalho_Final/: CMakeLists.txt  coisas_para_fazer.txt  main.cpp  resposta.cpp  resposta.h  sequencia.cpp  sequencia.h  tabuleiro.cpp  tabuleiro.h
